apps/n8n/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: n8n
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
    network-policy/default-deny: "true"
