apps/n8n/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
  namespace: n8n
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`n8n.pedrocoutinho.eu`)
      kind: Rule
      middlewares:
        - name: authelia
          namespace: traefik
      services:
        - name: n8n
          port: 5678
  tls:
    store:
      name: default
